--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dedent-js": "^1.0.1",
     "element-plus": "^1.0.1-beta.6",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
